--- a/Timer.html
+++ b/Timer.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div class="row">
+            <h1>Stopwatch</h1>
           <span id="hr">00</span>
           <span class="text">Hr</span>
           <span id="min">00</span>
